--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Lyrics + Balloons</title>
+  <title>SORRY BANGALAN</title>
   <!-- Google Fonts & Font Awesome for music icon -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
@@ -33,16 +33,13 @@
 
   <div id="apologyCard" class="glass-card">
     <p>
-      Heyy Madam Jiii,<br><br>
-      I am truly sorry for my mistakes. You mean everything to me, and I promise to always cherish and care for you. Please forgive me and let me make things right.
+      Heyy Ankita Jiii,<br><br>
+      I am truly sorry for my mistakes. Jo bhi mena bol uss din woh gussa ma tha bss and i am a dumb head. I don't have any intention to hurt you. Please forgive me and let me make things right.
     </p>
   </div>
-  
-  <!-- Balloon Container -->
-  <div class="balloons-container" id="balloonsContainer"></div>
-  
+
   <!-- Message Button (Centered at Bottom) -->
-  <a href="message.html" id="messageButton">Maaf me here</a>
+  <a href="message.html" id="messageButton">MAAF ME HERE</a>
 
   <script src="./js/script.js"></script>
  
