--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </div>
 
   <!-- Message Button (Centered at Bottom) -->
-  <a href="message.html" id="messageButton">MAAF ME HERE</a>
+  <a href="message.html" id="messageButton">MAAF ME HERE!!</a>
 
   <script src="./js/script.js"></script>
  
